[project]
name = "m3u82vlc"
version = "0.1.0"
description = "Simple m3u8 stream detector with vlc backed playback&recording functionality"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mitmproxy>=12.1.1",
    "selenium>=4.34.2",
    "setuptools>=80.9.0",
    "undetected-chromedriver",
]

[tool.uv.sources]
undetected-chromedriver = { git = "https://www.github.com/ultrafunkamsterdam/undetected-chromedriver", rev = "master" }
